Fix flow of Contact Us page so flow of top boxes doesn't overlap

--- a/css/source/_core.scss
+++ b/css/source/_core.scss
@@ -87,7 +87,7 @@ h5 {
 		color: $utd-stratos-blue;
 		text-align: right;
 		text-shadow: 1px 1px $utd-warm-gray6;
-		
+
 		@media (max-width: $screen-sm) {
 			font-size: 1.5em;
 			margin-top: 0px;
@@ -213,6 +213,7 @@ figcaption {
 .pull-left {
 	float: right;
 	margin-right: 30px;
+	margin-bottom: 10px;
 }
 
 .stroke {
